# simple_gstreamer_rtsp

./: CMakeLists.txt  README.md  rtsp_client.cpp  rtsp_config.h  rtsp_server.cpp
